[tool.poetry]
name = "test-aiohttp-study"
version = "0.1.0"
description = ""
authors = ["Takahashi Akira <a.t.qu.qu.qu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
prospector = {extras = ["with_pyroma", "with_vulture", "with_mypy", "with_bandit"], version = "^1.7.7"}
black = "^22.3.0"
aiohttp = "^3.8.1"
types-requests = "^2.27.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
